Trained basic SVM classifier, solved metrics problem

--- a/classify_text.ipynb
+++ b/classify_text.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        "Text(350.553125, 0.5, 'predicted label')"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -404,14 +404,14 @@
     }
    ],
    "source": [
-    "y_pred = text_clf.predict(X_test)\n",
+    "y_pred_nb = text_clf.predict(X_test)\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from matplotlib.pyplot import figure\n",
     "\n",
     "figure(figsize=(18, 12), dpi=80)\n",
     "x_axis_labels = categories\n",
     "\n",
-    "cm = confusion_matrix(y_test, y_pred)\n",
+    "cm = confusion_matrix(y_test, y_pred_nb)\n",
     "sns.heatmap(cm.T, square = True, annot=True, fmt = 'd', cbar = False, xticklabels = x_axis_labels, yticklabels=x_axis_labels)\n",
     "plt.xlabel('true label')\n",
     "plt.ylabel('predicted label')\n",
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -435,17 +435,17 @@
      "output_type": "stream",
      "text": [
       "Results for Naive Bayes classifier:\n",
-      "Accuracy: 0.774\n",
+      "Accuracy: 77.390 %\n",
       "Weighted f1 score: 0.768\n"
      ]
     }
    ],
    "source": [
     "from sklearn.metrics import accuracy_score, f1_score, precision_score, recall_score\n",
-    "naive_bayes_accuracy = accuracy_score(y_test, y_pred)\n",
-    "naive_bayes_f1_score = f1_score(y_test, y_pred, average='weighted')\n",
+    "naive_bayes_accuracy = accuracy_score(y_test, y_pred_nb)\n",
+    "naive_bayes_f1_score = f1_score(y_test, y_pred_nb, average='weighted')\n",
     "print(\"Results for Naive Bayes classifier:\")\n",
-    "print(\"Accuracy: {0:.3f}\".format(naive_bayes_accuracy))\n",
+    "print(\"Accuracy: {0:.3f} %\".format(naive_bayes_accuracy*100))\n",
     "print(\"Weighted f1 score: {0:.3f}\".format(naive_bayes_f1_score))"
    ]
   },
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,16 +478,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Text(350.553125, 0.5, 'predicted label')"
+       "[]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -503,48 +503,42 @@
     }
    ],
    "source": [
-    "y_pred = text_clf_svm.predict(X_test)\n",
+    "y_pred_svm = text_clf_svm.predict(X_test)\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from matplotlib.pyplot import figure\n",
     "\n",
     "figure(figsize=(18, 12), dpi=80)\n",
     "x_axis_labels = categories\n",
     "\n",
-    "cm = confusion_matrix(y_test, y_pred)\n",
+    "cm = confusion_matrix(y_test, y_pred_svm)\n",
     "sns.heatmap(cm.T, square = True, annot=True, fmt = 'd', cbar = False, xticklabels = x_axis_labels, yticklabels=x_axis_labels)\n",
     "plt.xlabel('true label')\n",
-    "plt.ylabel('predicted label')"
+    "plt.ylabel('predicted label')\n",
+    "plt.plot()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Results for Naive Bayes classifier:\n",
-      "Accuracy: 0.819\n",
+      "Results for basic SVM classifier:\n",
+      "Accuracy: 81.864 %\n",
       "Weighted f1 score: 0.819\n"
      ]
     }
    ],
    "source": [
-    "svm_basic_accuracy = accuracy_score(y_test, y_pred)\n",
-    "svm_basic_f1_score = f1_score(y_test, y_pred, average='weighted')\n",
+    "svm_basic_accuracy = accuracy_score(y_test, y_pred_svm)\n",
+    "svm_basic_f1_score = f1_score(y_test, y_pred_svm, average='weighted')\n",
     "print(\"Results for basic SVM classifier:\")\n",
-    "print(\"Accuracy: {0:.3f}\".format(svm_basic_accuracy))\n",
+    "print(\"Accuracy: {0:.3f} %\".format(svm_basic_accuracy*100))\n",
     "print(\"Weighted f1 score: {0:.3f}\".format(svm_basic_f1_score))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
