Return to working .ipynb file

--- a/classify_text.ipynb
+++ b/classify_text.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +445,7 @@
     "naive_bayes_accuracy = accuracy_score(y_test, y_pred)\n",
     "naive_bayes_f1_score = f1_score(y_test, y_pred, average='weighted')\n",
     "print(\"Results for Naive Bayes classifier:\")\n",
-    "print(\"Accuracy: {0:.3f}\".format(naive_bayes_accuracy))\n",
+    "print(\"Accuracy: {0:.3f} % \".format(naive_bayes_accuracy * 100))\n",
     "print(\"Weighted f1 score: {0:.3f}\".format(naive_bayes_f1_score))"
    ]
   },
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
     "svm_basic_accuracy = accuracy_score(y_test, y_pred)\n",
     "svm_basic_f1_score = f1_score(y_test, y_pred, average='weighted')\n",
     "print(\"Results for basic SVM classifier:\")\n",
-    "print(\"Accuracy: {0:.3f}\".format(svm_basic_accuracy))\n",
+    "print(\"Accuracy: {0:.3f} %\".format(svm_basic_accuracy * 100))\n",
     "print(\"Weighted f1 score: {0:.3f}\".format(svm_basic_f1_score))"
    ]
   },
