Creating file with conda env. To install the env use the command: `conda env create --file 'conda_env.txt'

--- a/classify_text.ipynb
+++ b/classify_text.ipynb
@@ -8,8 +8,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Podkręcić Bayesa, sprawdzić linear kernel, postarać się o lepszą klasyfikacje poprzez poszukiwanie hiperparametrów. Zmiana sposobu reprezentacji np doctowek\n",
+    "Transformer? Podziałać na poziomie reprezentacji tekstu i klasyfikatora tak aby spróbować osiągnąć lepsze wyniki klasyfikacji. Może jeszcze jeden zbiór danych np reuters. W sprawozdzaniu odnieść się do rezultatów z publikacji -> poszukać"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,12 +26,28 @@
     "import seaborn as sns\n",
     "sns.set()\n",
     "\n",
-    "from sklearn.datasets import fetch_20newsgroups\n"
+    "from sklearn.metrics import accuracy_score, f1_score, precision_score, recall_score\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.model_selection import train_test_split as tts\n",
+    "\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "# returs weight of words (?) need to check in docs\n",
+    "# i.e word from has really low weight cause it is in every article\n",
+    "from sklearn.feature_extraction.text import TfidfTransformer, CountVectorizer\n",
+    "\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from matplotlib.pyplot import figure\n",
+    "\n",
+    "from sklearn.datasets import fetch_20newsgroups\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +172,7 @@
       "  >>> vectors.nnz / float(vectors.shape[0])\n",
       "  159.01327...\n",
       "\n",
-      ":func:`sklearn.datasets.fetch_20newsgroups_vectorized` is a function which\n",
+      ":func:`sklearn.datasets.fetch_20newsgroups_vectorized` is a function which \n",
       "returns ready-to-use token counts features instead of file names.\n",
       "\n",
       ".. _`20 newsgroups website`: http://people.csail.mit.edu/jrennie/20Newsgroups/\n",
@@ -188,7 +212,7 @@
       "\n",
       "  >>> import numpy as np\n",
       "  >>> def show_top10(classifier, vectorizer, categories):\n",
-      "  ...     feature_names = vectorizer.get_feature_names_out()\n",
+      "  ...     feature_names = np.asarray(vectorizer.get_feature_names())\n",
       "  ...     for i, category in enumerate(categories):\n",
       "  ...         top10 = np.argsort(classifier.coef_[i])[-10:]\n",
       "  ...         print(\"%s: %s\" % (category, \" \".join(feature_names[top10])))\n",
@@ -251,32 +275,12 @@
       "running :ref:`sphx_glr_auto_examples_model_selection_grid_search_text_feature_extraction.py` with and without\n",
       "the ``--filter`` option to compare the results.\n",
       "\n",
-      ".. topic:: Data Considerations\n",
-      "\n",
-      "  The Cleveland Indians is a major league baseball team based in Cleveland,\n",
-      "  Ohio, USA. In December 2020, it was reported that \"After several months of\n",
-      "  discussion sparked by the death of George Floyd and a national reckoning over\n",
-      "  race and colonialism, the Cleveland Indians have decided to change their\n",
-      "  name.\" Team owner Paul Dolan \"did make it clear that the team will not make\n",
-      "  its informal nickname -- the Tribe -- its new team name.\" \"It’s not going to\n",
-      "  be a half-step away from the Indians,\" Dolan said.\"We will not have a Native\n",
-      "  American-themed name.\"\n",
-      "\n",
-      "  https://www.mlb.com/news/cleveland-indians-team-name-change\n",
-      "\n",
       ".. topic:: Recommendation\n",
       "\n",
-      "  - When evaluating text classifiers on the 20 Newsgroups data, you\n",
-      "    should strip newsgroup-related metadata. In scikit-learn, you can do this\n",
-      "    by setting ``remove=('headers', 'footers', 'quotes')``. The F-score will be\n",
-      "    lower because it is more realistic.\n",
-      "  - This text dataset contains data which may be inappropriate for certain NLP\n",
-      "    applications. An example is listed in the \"Data Considerations\" section\n",
-      "    above. The challenge with using current text datasets in NLP for tasks such\n",
-      "    as sentence completion, clustering, and other applications is that text\n",
-      "    that is culturally biased and inflammatory will propagate biases. This\n",
-      "    should be taken into consideration when using the dataset, reviewing the\n",
-      "    output, and the bias should be documented.\n",
+      "  When evaluating text classifiers on the 20 Newsgroups data, you\n",
+      "  should strip newsgroup-related metadata. In scikit-learn, you can do this by\n",
+      "  setting ``remove=('headers', 'footers', 'quotes')``. The F-score will be\n",
+      "  lower because it is more realistic.\n",
       "\n",
       ".. topic:: Examples\n",
       "\n",
@@ -294,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +323,6 @@
    ],
    "source": [
     "# Prepare data\n",
-    "from sklearn.model_selection import train_test_split as tts\n",
     "\n",
     "corpus = fetch_20newsgroups()\n",
     "categories = fetch_20newsgroups()[\"target_names\"]\n",
@@ -353,12 +356,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.naive_bayes import MultinomialNB\n",
-    "# returs weight of words (?) need to check in docs\n",
-    "# i.e word from has really low weight cause it is in every article\n",
-    "from sklearn.feature_extraction.text import TfidfTransformer, CountVectorizer\n",
-    "\n",
     "text_clf = Pipeline(\n",
     "    [\n",
     "        ('vect', CountVectorizer()),\n",
@@ -405,8 +402,6 @@
    ],
    "source": [
     "y_pred = text_clf.predict(X_test)\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "from matplotlib.pyplot import figure\n",
     "\n",
     "figure(figsize=(18, 12), dpi=80)\n",
     "x_axis_labels = categories\n",
@@ -441,7 +436,6 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import accuracy_score, f1_score, precision_score, recall_score\n",
     "naive_bayes_accuracy = accuracy_score(y_test, y_pred)\n",
     "naive_bayes_f1_score = f1_score(y_test, y_pred, average='weighted')\n",
     "print(\"Results for Naive Bayes classifier:\")\n",
@@ -462,7 +456,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.svm import SVC\n",
     "clf_svm_basic = SVC()\n",
     "\n",
     "text_clf_svm = Pipeline(\n",
@@ -504,8 +497,6 @@
    ],
    "source": [
     "y_pred = text_clf_svm.predict(X_test)\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "from matplotlib.pyplot import figure\n",
     "\n",
     "figure(figsize=(18, 12), dpi=80)\n",
     "x_axis_labels = categories\n",
@@ -540,6 +531,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## LINEAR SVM\n",
+    "Use the linear kernel for the classification by using `CountVectorizer()` and `TfidfTransformer()` as the text representation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf_svm_linear = SVC(kernel = 'linear')\n",
+    "\n",
+    "text_clf_linear = Pipeline(\n",
+    "    [\n",
+    "        ('vect', CountVectorizer()),\n",
+    "        ('tfidf', TfidfTransformer()),\n",
+    "        ('clf', clf_svm_linear)\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "print('MODEL IS TRAINED...')\n",
+    "text_clf_linear = text_clf_linear.fit(X_train, y_train)\n",
+    "\n",
+    "# Prediction\n",
+    "print('MAKING PREDICTIONS...')\n",
+    "y_pred = text_clf_svm.predict(X_test)\n",
+    "\n",
+    "figure(figsize=(18, 12), dpi=80)\n",
+    "x_axis_labels = categories\n",
+    "\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "sns.heatmap(cm.T, square = True, annot=True, fmt = 'd', cbar = False, xticklabels = x_axis_labels, yticklabels=x_axis_labels)\n",
+    "plt.xlabel('true label')\n",
+    "plt.ylabel('predicted label')\n",
+    "\n",
+    "# Metrics\n",
+    "print('METRICS...')\n",
+    "svm_basic_linear = accuracy_score(y_test, y_pred)\n",
+    "svm_linear_f1_score = f1_score(y_test, y_pred, average='weighted')\n",
+    "print(\"Results for basic SVM classifier:\")\n",
+    "print(\"Accuracy: {0:.3f} %\".format(svm_basic_linear * 100))\n",
+    "print(\"Weighted f1 score: {0:.3f}\".format(svm_linear_f1_score))\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -566,7 +605,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
