classify_text_1 comments for Kuba

--- a/classify_text_sec.ipynb
+++ b/classify_text_sec.ipynb
@@ -2,14 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-01-07 12:36:26.065344: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-01-07 12:36:26.065371: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow\n",
     "import tensorflow_hub as hub\n",
     "import numpy as np\n",
-    "import tensorflow_text"
+    "import tensorflow_text\n",
+    "from clean_text import clean_text"
    ]
   },
   {
@@ -21,17 +31,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-01-06 15:33:43.248708: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
-      "2022-01-06 15:33:43.248734: W tensorflow/stream_executor/cuda/cuda_driver.cc:269] failed call to cuInit: UNKNOWN ERROR (303)\n",
-      "2022-01-06 15:33:43.248758: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (dac-Latitude-E7450): /proc/driver/nvidia/version does not exist\n",
-      "2022-01-06 15:33:43.248941: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2022-01-07 12:36:38.653680: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
+      "2022-01-07 12:36:38.653716: W tensorflow/stream_executor/cuda/cuda_driver.cc:269] failed call to cuInit: UNKNOWN ERROR (303)\n",
+      "2022-01-07 12:36:38.653743: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (dac-Latitude-E7450): /proc/driver/nvidia/version does not exist\n",
+      "2022-01-07 12:36:38.654046: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -43,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,27 +80,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LABEL: sci.electronics\n",
-      "From: xandor@unixg.ubc.ca (John Gilbert )\n",
-      "Subject: Re: Exploding TV!\n",
-      "Organization: The University of British Columbia\n",
-      "Lines: 4\n",
-      "Distribution: usa\n",
-      "NNTP-Posting-Host: unixg.ubc.ca\n",
+      "LABEL: rec.sport.hockey\n",
+      "From: dchhabra@stpl.ists.ca (Deepak Chhabra)\n",
+      "Subject: Re: Goalie masks\n",
+      "Nntp-Posting-Host: stpl.ists.ca\n",
+      "Organization: Solar Terresterial Physics Laboratory, ISTS\n",
+      "Lines: 21\n",
       "\n",
-      " Just as a not of possible interest on this subject ..\n",
-      "It is my understanding that exploding televisions were a major cause of\n",
-      "domestic accidents in the Soviet Union in past years!\n",
-      "  \n",
+      "In article <120666@netnews.upenn.edu> kkeller@mail.sas.upenn.edu (Keith Keller) writes:\n",
+      ">My vote goes to John Vanbiesbrouck.  His mask has a skyline of New York\n",
+      ">City, and on the sides there are a bunch of bees (Beezer).  It looks\n",
+      ">really sharp.\n",
       "\n",
-      "from xandor unixg ubc ca john gilbert subject re exploding tv organization the university of british columbia lines number distribution usa nntp posting host unixg ubc ca just as a not of possible interest on this subject it is my understanding that exploding televisions were a major cause of domestic accidents in the soviet union in past years\n"
+      "Funny you should mention this; one time on HNIC Don Cherry pointed out\n",
+      "Vanbiesbrouck's mask.  He _hated_ it.  I think he said something to the effect\n",
+      "of:\n",
+      "\"You see?  He was great last year; now he goes out and gets that dopey mask \n",
+      "and he can't stop a beachball!\"\n",
+      "\n",
+      "You may or may not take Cherry seriously at all, but I cracked up when I heard\n",
+      "it.\n",
+      "\n",
+      "I think Ed Belfour has the current best mask in the NHL btw.  I also like\n",
+      "Moog's, and I'll give Fuhr's new one an honourable mention, although I haven't\n",
+      "seen it closely yet (it looked good from a distance!).  What's also neat is\n",
+      "Chevaldae's in Detroit; they call him \"Chevy\" so he has two checkered flags\n",
+      "painted at the top as in an auto race.\n",
+      "\n",
+      "\n",
+      "\n",
+      "from dchhabra stpl ists ca deepak chhabra subject re goalie masks nntp posting host stpl ists ca organization solar terresterial physics laboratory ists lines number in article number netnews upenn edu kkeller mail sas upenn edu keith keller writes my vote goes to john vanbiesbrouck his mask has a skyline of new york city and on the sides there are a bunch of bees beezer it looks really sharp funny you should mention this one time on hnic don cherry pointed out vanbiesbrouck s mask he _hated_ it i think he said something to the effect of you see he was great last year now he goes out and gets that dopey mask and he can t stop a beachball you may or may not take cherry seriously at all but i cracked up when i heard it i think ed belfour has the current best mask in the nhl btw i also like moog s and i ll give fuhr s new one an honourable mention although i haven t seen it closely yet it looked good from a distance what s also neat is chevaldae s in detroit they call him chevy so he has two checkered flags painted at the top as in an auto race\n"
      ]
     }
    ],
@@ -110,7 +136,7 @@
     "y_test = test_set.target\n",
     "\n",
     "\n",
-    "sample = 32\n",
+    "sample = 35\n",
     "\n",
     "# show sample of train_set\n",
     "print(\"LABEL: {}\".format(categories[y_train[sample]]))\n",
@@ -120,35 +146,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'group'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_44263/3351720209.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mfind_header\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0msample\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/tmp/ipykernel_44263/3351720209.py\u001b[0m in \u001b[0;36mfind_header\u001b[0;34m(text)\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mpattern2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mr'^From'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mmo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpattern3\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msearch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mfind_header\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0msample\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'group'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NNTP-Posting-Host: carson.u.washington.edu\n",
+      "\n",
+      "A fair number of brave souls who upgraded their SI clock oscillator have\n",
+      "shared their experiences for this poll. Please send a brief message detailing\n",
+      "your experiences with the procedure. Top speed attained, CPU rated speed,\n",
+      "add on cards and adapters, heat sinks, hour of usage per day, floppy disk\n",
+      "functionality with 800 and 1.4 m floppies are especially requested.\n",
+      "\n",
+      "I will be summarizing in the next two days, so please add to the network\n",
+      "knowledge base if you have done the clock upgrade and haven't answered this\n",
+      "poll. Thanks.\n",
+      "\n",
+      "Guy Kuo <guykuo@u.washington.edu>\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "# find th header\n",
-    "sample = 36\n",
+    "sample = 1\n",
+    "pattern = \"(From)(.|\\n)*(: )(\\d)*(\\n)\"\n",
+    "replace = \"\"\n",
+    "res = re.search(pattern, X_train[sample])\n",
     "# print(X_train[sample])\n",
-    "\n",
-    "def find_header(text):\n",
-    "    pattern = re.compile(r'(^F)(.|\\n)*(\\d$)')\n",
-    "    pattern3 = re.compile(r'(^F)(.|\\n)*(Lines)(.)*(\\d$)')\n",
-    "    pattern2 = re.compile(r'^From')\n",
-    "    mo = pattern3.search(text)\n",
-    "    print(mo.group())\n",
-    "\n",
-    "find_header(X_train[sample])"
+    "new = re.sub(pattern, replace, X_train[sample])\n",
+    "print(new)"
    ]
   },
   {
