--- a/classify_text_first.ipynb
+++ b/classify_text_first.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,8 +43,10 @@
     "\n",
     "from tensorflow.keras.utils import get_file\n",
     "\n",
-    "import gensim\n",
-    "import re"
+    "# import tensorflow_hub as hub\n",
+    "# import tensorflow_text  \n",
+    "import re\n",
+    "import string"
    ]
   },
   {
@@ -634,260 +636,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Text representation by using word2vec"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://s3.amazonaws.com/dl4j-distribution/GoogleNews-vectors-negative300.bin.gz\n",
-      "1647050752/1647046227 [==============================] - 73s 0us/step\n",
-      "/home/dac/.keras/datasets/GoogleNews-vectors-negative300.bin.gz\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Get the dictionary\n",
-    "try:\n",
-    "    path = get_file('GoogleNews-vectors-negative300.bin.gz', \n",
-    "        origin='https://s3.amazonaws.com/dl4j-distribution/' +\\\n",
-    "                    'GoogleNews-vectors-negative300.bin.gz')\n",
-    "except:\n",
-    "    print('Error downloading')\n",
-    "    raise\n",
-    "    \n",
-    "print(path)    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "300\n"
-     ]
-    }
-   ],
-   "source": [
-    "model = gensim.models.KeyedVectors.load_word2vec_format(path, binary=True)\n",
-    "# test the model -> word vectorazation\n",
-    "w = model['hi']\n",
-    "print(len(w))"
+    "## KUBA ZRÓB TO SAMO CO WYŻEJ TYLKO najpierw. analiza dla różnych funckji jądra,a potem uzyj funcji clean_text z clea_text,py, wyszczyść te dane wszytskie z nagłówków itp (funcksja zrobi to sama) i rzetestuje wszytskie warianty raz jeszcze zeby mievc wyniki klasyfikacji, jak cos to pisz/dziownx xd\n",
+    "tak to zrobiłem w drugim pliku </br>\n",
+    "`\n",
+    "X_train = [clean_text(x_train) for x_train in X_train]\n",
+    "`\n",
+    "</br>\n",
+    "`\n",
+    "X_test = [clean_text(x_test) for x_test in X_test]\n",
+    "`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "Each word is a vector of 300 values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BEFORE CLEANING: \n",
-      "From: lerxst@wam.umd.edu (where's my thing)\n",
-      "Subject: WHAT car is this!?\n",
-      "Nntp-Posting-Host: rac3.wam.umd.edu\n",
-      "Organization: University of Maryland, College Park\n",
-      "Lines: 15\n",
-      "\n",
-      " I was wondering if anyone out there could enlighten me on this car I saw\n",
-      "the other day. It was a 2-door sports car, looked to be from the late 60s/\n",
-      "early 70s. It was called a Bricklin. The doors were really small. In addition,\n",
-      "the front bumper was separate from the rest of the body. This is \n",
-      "all I know. If anyone can tellme a model name, engine specs, years\n",
-      "of production, where this car is made, history, or whatever info you\n",
-      "have on this funky looking car, please e-mail.\n",
-      "\n",
-      "Thanks,\n",
-      "- IL\n",
-      "   ---- brought to you by your neighborhood Lerxst ----\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "AFTER CLEANING:\n",
-      "from  lerxst wam umd edu  where's my thing  subject  what car is this   nntp posting host  rac3 wam umd edu organization  university of maryland  college park lines  15   i was wondering if anyone out there could enlighten me on this car i saw the other day  it was a 2 door sports car  looked to be from the late 60s  early 70s  it was called a bricklin  the doors were really small  in addition  the front bumper was separate from the rest of the body  this is  all i know  if anyone can tellme a model name  engine specs  years of production  where this car is made  history  or whatever info you have on this funky looking car  please e mail   thanks    il         brought to you by your neighborhood lerxst\n",
-      "\n",
-      "SAMPLE OF CLEANED TEXT: \n",
-      " from  tchen magnus acs ohio state edu  tsung kun chen  subject     software forsale  lots     nntp posting host  magnusug magnus acs ohio state edu organization  the ohio state university            this is a post for my friend   you can either call                     him  j k lee   614 791 0748    or drop me a mail          distribution  usa lines  39  1   software publishing superbase 4 windows v 1 3                80  2   ocr system readright v 3 1 for windows                       65  3   ocr system readright  v 2 01 for dos                         65  4   unregistered zortech 32 bit c   compiler v 3 1                250      with multiscope windows debugger       whitewater resource toolkit  library source code  5   glockenspiel imagesoft commonview 2 windows      applications framework for borland c                        70  6   spontaneous assembly library with source code                50  7   microsoft macro assembly 6 0                                 50  8   microsoft windows v 3 1 sdk documentation                    125  9   microsoft foxpro v 2 0                                       75  10   wordperfect 5 0 developer's toolkit                         20  11   kedwell software databoss v 3 5 c code generator            100  12   kedwell installboss v 2 0 installation generator            35  13   liant software c   views v 2 1        windows application framework with source code            195  14   ibm os 2 2 0   developer's toolkit                          95  15   cbtree dos windows library with source code                 120  16   symantec timeline for windows                               90  17   timeslip timesheet professional for windows                 30           many more software books available price negotiable\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Text should be cleaned from special characters like \\n only lowercases should appear + the header should be removed\n",
-    "print(\"BEFORE CLEANING: \")\n",
-    "print(X_train[0])\n",
-    "X_train[1]\n",
-    "\n",
-    "def cleantext(text):\n",
-    "    cleaned = re.sub(\"[^a-zA-Z0-9']\",\" \",text)\n",
-    "    lowered = cleaned.lower()\n",
-    "    return lowered.strip()\n",
-    "c = cleantext(X_train[0])\n",
-    "print('\\nAFTER CLEANING:')\n",
-    "print(c)\n",
-    "\n",
-    "# cleaning X_train and X_test\n",
-    "X_train = [cleantext(t) for t in X_train]\n",
-    "X_test = [cleantext(t) for t in X_test]\n",
-    "\n",
-    "print(f'\\nSAMPLE OF CLEANED TEXT: \\n {X_train[100]}')\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Tokenization -> split the whole sentence into words"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tokenized first sample: \n",
-      "['from', 'lerxst', 'wam', 'umd', 'edu', \"where's\", 'my', 'thing', 'subject', 'what', 'car', 'is', 'this', 'nntp', 'posting', 'host', 'rac3', 'wam', 'umd', 'edu', 'organization', 'university', 'of', 'maryland', 'college', 'park', 'lines', '15', 'i', 'was', 'wondering', 'if', 'anyone', 'out', 'there', 'could', 'enlighten', 'me', 'on', 'this', 'car', 'i', 'saw', 'the', 'other', 'day', 'it', 'was', 'a', '2', 'door', 'sports', 'car', 'looked', 'to', 'be', 'from', 'the', 'late', '60s', 'early', '70s', 'it', 'was', 'called', 'a', 'bricklin', 'the', 'doors', 'were', 'really', 'small', 'in', 'addition', 'the', 'front', 'bumper', 'was', 'separate', 'from', 'the', 'rest', 'of', 'the', 'body', 'this', 'is', 'all', 'i', 'know', 'if', 'anyone', 'can', 'tellme', 'a', 'model', 'name', 'engine', 'specs', 'years', 'of', 'production', 'where', 'this', 'car', 'is', 'made', 'history', 'or', 'whatever', 'info', 'you', 'have', 'on', 'this', 'funky', 'looking', 'car', 'please', 'e', 'mail', 'thanks', 'il', 'brought', 'to', 'you', 'by', 'your', 'neighborhood', 'lerxst']\n"
-     ]
-    }
-   ],
-   "source": [
-    "X_train= [[w for w in sentence.split(\" \") if w != \"\"] for sentence in X_train]\n",
-    "X_test= [[w for w in sentence.split(\" \") if w != \"\"] for sentence in X_test]\n",
-    "\n",
-    "print(f'Tokenized first sample: \\n{X_train[0]}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Create Sequencer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Sequencer():\n",
-    "    \n",
-    "    def __init__(self,\n",
-    "                 all_words,\n",
-    "                 max_words,\n",
-    "                 seq_len,\n",
-    "                 embedding_matrix\n",
-    "                ):\n",
-    "        \n",
-    "        self.seq_len = seq_len\n",
-    "        self.embed_matrix = embedding_matrix\n",
-    "        \"\"\"\n",
-    "        temp_vocab = Vocab which has all the unique words\n",
-    "        self.vocab = Our last vocab which has only most used N words.\n",
-    "    \n",
-    "        \"\"\"\n",
-    "        temp_vocab = list(set(all_words))\n",
-    "        self.vocab = []\n",
-    "        self.word_cnts = {}\n",
-    "        \"\"\"\n",
-    "        Now we'll create a hash map (dict) which includes words and their occurencies\n",
-    "        \"\"\"\n",
-    "        for word in temp_vocab:\n",
-    "            # 0 does not have a meaning, you can add the word to the list\n",
-    "            # or something different.\n",
-    "            count = len([0 for w in all_words if w == word])\n",
-    "            self.word_cnts[word] = count\n",
-    "            counts = list(self.word_cnts.values())\n",
-    "            indexes = list(range(len(counts)))\n",
-    "        \n",
-    "        # Now we'll sort counts and while sorting them also will sort indexes.\n",
-    "        # We'll use those indexes to find most used N word.\n",
-    "        cnt = 0\n",
-    "        while cnt + 1 != len(counts):\n",
-    "            cnt = 0\n",
-    "            for i in range(len(counts)-1):\n",
-    "                if counts[i] < counts[i+1]:\n",
-    "                    counts[i+1],counts[i] = counts[i],counts[i+1]\n",
-    "                    indexes[i],indexes[i+1] = indexes[i+1],indexes[i]\n",
-    "                else:\n",
-    "                    cnt += 1\n",
-    "        \n",
-    "        for ind in indexes[:max_words]:\n",
-    "            self.vocab.append(temp_vocab[ind])\n",
-    "                    \n",
-    "    def textToVector(self,text):\n",
-    "        # First we need to split the text into its tokens and learn the length\n",
-    "        # If length is shorter than the max len we'll add some spaces (100D vectors which has only zero values)\n",
-    "        # If it's longer than the max len we'll trim from the end.\n",
-    "        tokens = text.split()\n",
-    "        len_v = len(tokens)-1 if len(tokens) < self.seq_len else self.seq_len-1\n",
-    "        vec = []\n",
-    "        for tok in tokens[:len_v]:\n",
-    "            try:\n",
-    "                vec.append(self.embed_matrix[tok])\n",
-    "            except Exception as E:\n",
-    "                pass\n",
-    "        \n",
-    "        last_pieces = self.seq_len - len(vec)\n",
-    "        for i in range(last_pieces):\n",
-    "            vec.append(np.zeros(100,))\n",
-    "        \n",
-    "        return np.asarray(vec).flatten()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_14808/2818053857.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m sequencer = Sequencer(all_words = [token for seq in X_train for token in seq],\n\u001b[0m\u001b[1;32m      2\u001b[0m               \u001b[0mmax_words\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1200\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m               \u001b[0mseq_len\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m15\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m               \u001b[0membedding_matrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m              )\n",
-      "\u001b[0;32m/tmp/ipykernel_14808/2991566974.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, all_words, max_words, seq_len, embedding_matrix)\u001b[0m\n\u001b[1;32m     24\u001b[0m             \u001b[0;31m# 0 does not have a meaning, you can add the word to the list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m             \u001b[0;31m# or something different.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m             \u001b[0mcount\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mw\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mall_words\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mw\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mword\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mword_cnts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcount\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m             \u001b[0mcounts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mword_cnts\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/tmp/ipykernel_14808/2991566974.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     24\u001b[0m             \u001b[0;31m# 0 does not have a meaning, you can add the word to the list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m             \u001b[0;31m# or something different.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m             \u001b[0mcount\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mw\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mall_words\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mw\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mword\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mword_cnts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcount\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m             \u001b[0mcounts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mword_cnts\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "sequencer = Sequencer(all_words = [token for seq in X_train for token in seq],\n",
-    "              max_words = 1200,\n",
-    "              seq_len = 15,\n",
-    "              embedding_matrix = model\n",
-    "             )\n",
-    "test_vec = sequencer.textToVector(\"i am in love with you\")\n",
-    "test_vec"
-   ]
+   "source": []
   }
  ],
  "metadata": {
