Add comments with next steps My kernel is crashing due to lack of memory, need to run the classify_text_sec.ipynb on GPU

--- a/classify_text_sec.ipynb
+++ b/classify_text_sec.ipynb
@@ -9,8 +9,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-01-07 12:36:26.065344: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2022-01-07 12:36:26.065371: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+      "2022-01-07 16:18:36.318442: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-01-07 16:18:36.318484: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
      ]
     }
    ],
@@ -19,7 +19,19 @@
     "import tensorflow_hub as hub\n",
     "import numpy as np\n",
     "import tensorflow_text\n",
-    "from clean_text import clean_text"
+    "from clean_text import clean_text\n",
+    "\n",
+    "import string\n",
+    "import re\n",
+    "import preprocessor as p\n",
+    "from spacy.lang.en import stop_words as spacy_stopwords  # we use spacy's list of stop words to clean our data\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "sns.set()\n",
+    "\n",
+    "from sklearn.metrics import accuracy_score, f1_score, precision_score, recall_score\n",
+    "from sklearn.svm import SVC"
    ]
   },
   {
@@ -31,21 +43,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-01-07 12:36:38.653680: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
-      "2022-01-07 12:36:38.653716: W tensorflow/stream_executor/cuda/cuda_driver.cc:269] failed call to cuInit: UNKNOWN ERROR (303)\n",
-      "2022-01-07 12:36:38.653743: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (dac-Latitude-E7450): /proc/driver/nvidia/version does not exist\n",
-      "2022-01-07 12:36:38.654046: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# load pretrained model\n",
     "embed = hub.load(\"https://tfhub.dev/google/universal-sentence-encoder-multilingual/3\")"
@@ -53,34 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import string\n",
-    "import re\n",
-    "import preprocessor as p\n",
-    "from spacy.lang.en import stop_words as spacy_stopwords  # we use spacy's list of stop words to clean our data\n",
-    "\n",
-    "stop_words = spacy_stopwords.STOP_WORDS\n",
-    "punctuations = string.punctuation\n",
-    "\n",
-    "def clean(text):\n",
-    "    \n",
-    "    text = re.sub(r'\\W+', ' ', text)  # remove non-alphanumeric characters\n",
-    "    # replace numbers with the word 'number'\n",
-    "    text = re.sub(r\"\\d+\", \"number\", text)\n",
-    "    # don't consider sentenced with less than 3 words (i.e. assumed noise)\n",
-    "    if len(text.strip().split()) < 3:\n",
-    "        return None\n",
-    "    text = text.lower()  # lower case everything\n",
-    "    \n",
-    "    return text.strip() # remove redundant spaces"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -115,8 +88,7 @@
       "painted at the top as in an auto race.\n",
       "\n",
       "\n",
-      "\n",
-      "from dchhabra stpl ists ca deepak chhabra subject re goalie masks nntp posting host stpl ists ca organization solar terresterial physics laboratory ists lines number in article number netnews upenn edu kkeller mail sas upenn edu keith keller writes my vote goes to john vanbiesbrouck his mask has a skyline of new york city and on the sides there are a bunch of bees beezer it looks really sharp funny you should mention this one time on hnic don cherry pointed out vanbiesbrouck s mask he _hated_ it i think he said something to the effect of you see he was great last year now he goes out and gets that dopey mask and he can t stop a beachball you may or may not take cherry seriously at all but i cracked up when i heard it i think ed belfour has the current best mask in the nhl btw i also like moog s and i ll give fuhr s new one an honourable mention although i haven t seen it closely yet it looked good from a distance what s also neat is chevaldae s in detroit they call him chevy so he has two checkered flags painted at the top as in an auto race\n"
+      "\n"
      ]
     }
    ],
@@ -140,45 +112,29 @@
     "\n",
     "# show sample of train_set\n",
     "print(\"LABEL: {}\".format(categories[y_train[sample]]))\n",
-    "print(X_train[sample])\n",
-    "print(clean(X_train[sample]))"
+    "print(X_train[sample])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NNTP-Posting-Host: carson.u.washington.edu\n",
-      "\n",
-      "A fair number of brave souls who upgraded their SI clock oscillator have\n",
-      "shared their experiences for this poll. Please send a brief message detailing\n",
-      "your experiences with the procedure. Top speed attained, CPU rated speed,\n",
-      "add on cards and adapters, heat sinks, hour of usage per day, floppy disk\n",
-      "functionality with 800 and 1.4 m floppies are especially requested.\n",
-      "\n",
-      "I will be summarizing in the next two days, so please add to the network\n",
-      "knowledge base if you have done the clock upgrade and haven't answered this\n",
-      "poll. Thanks.\n",
-      "\n",
-      "Guy Kuo <guykuo@u.washington.edu>\n",
-      "\n"
+      "LABEL: rec.sport.hockey\n",
+      "from dchhabra stpl ists ca deepak chhabra subject re goalie masks nntp posting host stpl ists ca organization solar terresterial physics laboratory ists lines number in article number netnews upenn edu kkeller mail sas upenn edu keith keller writes my vote goes to john vanbiesbrouck his mask has a skyline of new york city and on the sides there are a bunch of bees beezer it looks really sharp funny you should mention this one time on hnic don cherry pointed out vanbiesbrouck s mask he _hated_ it i think he said something to the effect of you see he was great last year now he goes out and gets that dopey mask and he can t stop a beachball you may or may not take cherry seriously at all but i cracked up when i heard it i think ed belfour has the current best mask in the nhl btw i also like moog s and i ll give fuhr s new one an honourable mention although i haven t seen it closely yet it looked good from a distance what s also neat is chevaldae s in detroit they call him chevy so he has two checkered flags painted at the top as in an auto race\n"
      ]
     }
    ],
    "source": [
-    "# find th header\n",
-    "sample = 1\n",
-    "pattern = \"(From)(.|\\n)*(: )(\\d)*(\\n)\"\n",
-    "replace = \"\"\n",
-    "res = re.search(pattern, X_train[sample])\n",
-    "# print(X_train[sample])\n",
-    "new = re.sub(pattern, replace, X_train[sample])\n",
-    "print(new)"
+    "# Show the text cleaner work\n",
+    "cleaned = clean_text(X_train[sample])\n",
+    "\n",
+    "print(\"LABEL: {}\".format(categories[y_train[sample]]))\n",
+    "print(cleaned)"
    ]
   },
   {
@@ -190,10 +146,75 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Clean X_train and X_test\n",
+    "X_train = [clean_text(x_train) for x_train in X_train]\n",
+    "X_test = [clean_text(x_test) for x_test in X_test]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data instances before transform 7532\n"
+     ]
+    }
+   ],
+   "source": [
+    "# we just feed in the list of sentences, and we get the vector representation of each sentence\n",
+    "# we don't have enough memory to apply embeddings in one shot,\n",
+    "# so we have to split the data into batches and concatenate them later\n",
+    "\n",
+    "def transform_data(data, split):\n",
+    "    splits = np.array_split(data, split)\n",
+    "    l = list()\n",
+    "    for split in splits:\n",
+    "        l.append(embed(split))\n",
+    "    data = tensorflow.concat(l, axis=0)\n",
+    "    del l\n",
+    "\n",
+    "    return data\n",
+    "\n",
+    "# Do not have enough memory\n",
+    "import os\n",
+    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3'\n",
+    "\n",
+    "print(f'Data instances before transform {len(X_test)}')\n",
+    "\n",
+    "X_test = transform_data(X_test, 1)\n",
+    "print(f'Data instances after transform {len(X_test)}')\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# MI SIE CRASHUJE SSYTEM NA CPU, NAWET JAK PROBUJE PRZEKSZTAŁCIĆ JEDNĄ DANĄ NA RAZ XD, spróbuj to puścić. Jak się uda to trzeba tu niżej te wszystkie klasyfikatory jak w pliku `classify_text_first.ipynb` przelecieć i sprawdzić, poniżej wrzucam kod jak to mnie wiecej bedzie wyglądać i porobić wykresy i macierze pomyłek"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "clf = SVC() # z parametrami\n",
+    "clf.fit(X_train, y_train)\n",
+    "y_pred = clf.predict(np.array(X_test))\n",
+    "\n",
+    "# I wykresy porobić oraz metryki jak w poprzednim pliku "
+   ]
   }
  ],
  "metadata": {
